--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
 server:
   port: 9001
+  address: 0.0.0.0
 
 management:
   endpoints:
@@ -8,17 +9,17 @@ management:
         include: prometheus, health, info
   endpoint:
     prometheus:
-      enabled: true
+      access: unrestricted
   metrics:
     tags:
-      application: nifi-metrics-service
+      application: was-metrics-service
 monitor:
   # base URL for flow-controller API
   api-base-url: ${HOST_URL}
   user: ${HOST_USERNAME}
   password: ${HOST_PASSWORD}
   verify-ssl: false
-  poll-interval-ms: 10000
+  poll-interval-ms: 100
 spring:
   http:
     codecs:
