--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.4.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
